fixed wrong word

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apibioplate",
+  "name": "express-api-boilerplate",
   "version": "1.0.0",
   "homepage": "",
   "bugs": "https://github.com/muaytoma/api-bioplate/issues",
